--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		
 		<!--Titulo de la WEB-->
-		<title>Cristian Martínez Web</title>
+		<title>Proyect-JS</title>
 		
 		<!--Viewport Responsive-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 		
 		<!--Color de la APP-->
-		<meta name="theme-color" content="#FB314E" />		
+		<meta name="theme-color" content="#2ECC71" />		
 		
 		<!--Optimización para movil-->
 		<meta name="MobileOptimized" content="width" />
@@ -42,7 +42,7 @@
 		<header id="main-header">
 			<div class="container">
 				<div id="logo">
-					<h1>Cristian Martínez WEB</h1>
+					<h1>Proyect-JS</h1>
 				</div>
 				<div id="menu">
 					<ul>
