--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		
 		<div id="slider">
 			<div class="container">
-				<h2>Desarrollador Web y Músico</h2>
+				<h2>Aprende de manera fácil y eficaz</h2>
 			</div>
 		</div>
 		
