--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!--Ícono de la WEB-->
-		<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+		<link rel="shortcut icon" type="image/png" href="img/logo.png" />
 		
 		<!--Color de la APP-->
 		<meta name="theme-color" content="#2ECC71" />		
