--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<!--Meta etiquetas PWA para iOS-->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<link rel="apple-touch-icon" href="img/favicon.png" />
-		<link rel="apple-touch-startup-image" href="img/favicon.png" />
+		<link rel="apple-touch-icon" href="img/logo.png" />
+		<link rel="apple-touch-startup-image" href="img/logo.png" />
 		
 		<!--Manifiesto-->
 		<link rel="manifest" href="manifest.json" />
@@ -118,7 +118,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis aliquet neque, lobortis lobortis felis sollicitudin a. In finibus lobortis quam a condimentum.</p>
 					</div>
 			</div>
-		</div><!--End Servicios-->
+		</div><!--End Videos-->
 		
 		<div class="clearfix" />
 		
