--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!--Ícono de la WEB-->
-		<link rel="shortcut icon" type="image/png" href="img/logo.png" />
+		<link rel="shortcut icon" type="image/png" href="img/logo.PNG" />
 		
 		<!--Color de la APP-->
 		<meta name="theme-color" content="#2ECC71" />		
@@ -23,8 +23,8 @@
 		<!--Meta etiquetas PWA para iOS-->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<link rel="apple-touch-icon" href="img/logo.png" />
-		<link rel="apple-touch-startup-image" href="img/logo.png" />
+		<link rel="apple-touch-icon" href="img/logo.PNG" />
+		<link rel="apple-touch-startup-image" href="img/logo.PNG" />
 		
 		<!--Manifiesto-->
 		<link rel="manifest" href="manifest.json" />
