--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					</div>					
 					
 					<div class="video">
-						
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/seaq4UxKNHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<p>En este curso completo de Javascript veremos el siguiente contenido.</p>
 					</div>
 			</div>
