--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 				
 				<div class="service">
 					<img src="img/3.png" />
-					<h3>Mentoria</h3>
-					<p>Puedo ser tu mentor y profesor para enseñarte desarrollo y programacion moderna.</p>
+					<h3>Bases de datos</h3>
+					<p>Diseño y gestion de bases de datos ideales para tu proyectos</p>
 				</div>
 			</div>
 			
