--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<header id="main-header">
 			<div class="container">
 				<div id="logo">
-					<h1>Proyect-JS</h1>
+					<h1>Aprendiendo a programar con Tirri</h1>
 				</div>
 				<div id="menu">
 					<ul>
