--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		
 		<!--Titulo de la WEB-->
-		<title>Proyect-JS</title>
+		<title>Learning to code with Tirri</title>
 		
 		<!--Viewport Responsive-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -42,7 +42,7 @@
 		<header id="main-header">
 			<div class="container">
 				<div id="logo">
-					<img src="img/Logo4.png" />
+					<img src="img/Logo4.PNG" />
 				</div>
 				<div id="menu">
 					<ul>
