--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<header id="main-header">
 			<div class="container">
 				<div id="logo">
-					<img src="img/Logo4.PNG" />
+					<img class="img4" src="img/Logo4.PNG" />
 				</div>
 				<div id="menu">
 					<ul>
